--- a/tasks/create-user.yml
+++ b/tasks/create-user.yml
@@ -2,7 +2,7 @@
 - name: Create a user
   hosts: webhosts
   vars_files:
-    - lisa-secret.yml
+    - peter-secret.yml
   tasks:
     - name: Create user...
       user:
