Added add user, drop user, etc playbooks

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ remote_user = ansible
 host_key_checing = false
 inventory = inventory
 interpreter_python = auto_silent
+gathering = explicit
 
 [privilege_escalation]
 become = True
