--- a/create_pg_user.yml
+++ b/create_pg_user.yml
@@ -13,7 +13,7 @@
       community.postgresql.postgresql_user:
         name: "{{ item.username }}"
         password: "{{ item.password }}"
-        role_attr_flags: SUPERUSER,CREATEDB
+        role_attr_flags: "{{ item.roles_attrs }}"
         state: present
       loop: "{{ postgres_users }}"
       become: true
