--- a/group_vars/postgres_dbas.yml
+++ b/group_vars/postgres_dbas.yml
@@ -1,6 +1,6 @@
 postgres_users:
-  - { username: prajeet, password: pass1, superuser: yes, login: yes }
-  - { username: earle, password: pass2, superuser: yes, login: yes }
-  - { username: aurel, password: pass3, superuser: yes, login: yes }
-  - { username: vlad, password: pass4, superuser: yes, login: yes }
-  - { username: andrey, password: pass5, superuser: no, login: yes }
+  - { username: prajeet, password: pass1, roles_attrs: 'SUPERUSER,CREATEDB,REPLICATION' }
+  - { username: earle, password: pass2, roles_attrs: 'SUPERUSER,CREATEDB,REPLICATION' }
+  - { username: aurel, password: pass3, roles_attrs: 'SUPERUSER,CREATEDB,REPLICATION' }
+  - { username: vlad, password: pass4, roles_attrs: 'SUPERUSER,CREATEDB,REPLICATION' }
+  - { username: andrey, password: pass5, roles_attrs: 'LOGIN' }
